# openpl-physics-engine

./: .gitignore  CMakeLists.txt  README.md  build.bat
android/app/: CMakeLists.txt  build.gradle
android/app/src/androidTest/java/com/fastsmartsystem/openbt/: ExampleInstrumentedTest.java
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/openpl/: PL10.java
android/app/src/main/res/values/: strings.xml
android/app/src/test/java/com/fastsmartsystem/openbt/: ExampleUnitTest.java
android/gradle/wrapper/: gradle-wrapper.properties
binaries/windows/dynamic/: libopenpl.def  libopenpl64.def
bullet/: CMakeLists.txt
bullet/BulletDynamics/Dynamics/: btRigidBody.cpp
docs/: CNAME  docs-es.html  index.html
docs/css/: mainstyle.css  materialize.css
docs/es/: apidocs.html  datatypes.html  implementation.html  plBindBody.html  plBindCharacter.html  plBindShape.html  plBindconstraint.html  plBindvehicle.html  plBufferData.html  plCharacter3f.html  plCharacterf.html  plConstraint3f.html  plConstraintf.html  plConstraintfv.html  plConstrainti.html  plContactCallBack.html  plCreate.html  plCreateContext.html  plDeleteBody.html  plDeleteCharacter.html  plDeleteConstraint.html  plDeletevehicle.html  plDestroyContext.html  plDynamicWorld3f.html  plDynamicWorldfv.html  plDynamicWorldi.html  plGenBody.html  plGenCharacter.html  plGenConstraint.html  plGenShape.html  plGenvehicle.html  plGetCharacterf.html  plGetCharacterfv.html  plGetDynamicWorld3f.html  plGetDynamicWorldfv.html  plGetDynamicWorldi.html  plGetDynamicWorldiv.html  plGetInteger.html  plGetRigidBody3f.html  plGetRigidBodyf.html  (+22 more)
docs/es/examples/: SimpleExample.html  simple.cpp
java-backend/: compile-x32.bat  compile-x64.bat
java-backend/com/openpl/: PL10.java
java-bindings/: wrapper.cpp
java-bindings/com/openpl/: PL10.java  plContactCallBack.java
src/PL/: BulletContext.cpp  BulletContext.h  debug.h  pl.cpp  pl10.h
src/bullet/BulletDynamics/Dynamics/: btRigidBody.h
windows/: Openpl32.cbp  Openpl32.depend  Openpl64.cbp  static32.cbp  static64.cbp
